# aw-watcher-lastfm

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: logging.rs  main.rs
