[package]
name = "aw-watcher-lastfm"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-models = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
chrono = "0.4.38"
dirs = "6.0.0"
fern = { version = "0.7", features = ["colored"] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
ctrlc = "3.4.4"
crossbeam-channel = "0.5.13"
regex = "1.10.3"
